umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_invalid-connectivity.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 36
bond_count: 38
sum_formula: C15H16BNO2S+4
graph6: cs_GGC@AG_?@?@??a?I????C_?O??G??D???G???G???O???O???G???A????O???@????A????A????@?????C?????_????C?????G??
