umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_large-symmetric.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 120
bond_count: 152
sum_formula: C120
graph6: "~?@whEGOC@?G?_PG???_?G?@??C?AK?????C??@???G???_??P????????_???G???@????C???AG????G????C????@?????G?????_????@?????@??????_?????G?????@??????C??????G??????G??????C??????@???????G???????_??????@???????@????????_??????A_???????G????????C?????O??G????????G????????C???A????@?????G???G????????A?????????@????O????@?????????p??????????G??????A?????????????C??????????G??????????G??????????C??????????@???????????g???@???????_??????????@???????????@????????????_???????????G???????????@???????_????C????????????O????????????G??????G?????C??????_?????@?????????????G?????????????_????????????@?????????????@?????????????`_????????????@G???????????@?C??????????????C??????????????G??????????????G??????????????C??????????????@???????????@???G??????????????C???????????????@???????????????@????????????????_???????????????G???????????????@????????????????S?????K??????????G????????????????_?????A??????????C????????????????@?????????????C???G????????????????A_????????????????C???????????????@?@?????????????@?`??_???????????c?????????????????A?????????????????_?????????????@???G?????????????k??????????????????C???????????????????????????????????????????????????G??????????????????????????????????????@"
