umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_mol-ind-468.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 33
sum_formula: C18H8N2
graph6: "[??????_I??@?DK?_CG?@??C??G??G??C??P???G?@?`?_@@_?@?S??_@??G???@"
