umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_mon2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 22
sum_formula: C10H7NO4
graph6: Ub?WIC??GA_@A??@C???@??_?A?A?C?????@???O
