umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_pc-438107.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 42
bond_count: 45
sum_formula: C18H9F12O2Si-1
graph6: "i?????????????_?O?C??_???@??@???W??Q?B`?B_G@o?O[??_??C???@????@????O????@????@?????g????I_????????@?????G?????A?????C??????O?????G??????G?????@??"
